dropped some old shift

--- a/apps/todo-app/src/main.css
+++ b/apps/todo-app/src/main.css
@@ -1,6 +1,11 @@
 /* stylelint-disable */
 
 /* Source: http://todomvc.com/ */
+body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 html,
 body {
